# K-indexer

./: .gitignore  API_TECHNICAL_SPECIFICATIONS.md  Cargo.toml  Database_Schema_Management_Technical_Specification.md  HASHTAGS_API_ENDPOINTS.md  HASHTAG_IMPLEMENTATION_SPEC.md  K-TRANSACTION-FLOW.md  LICENSE  NEW_DB_SCHEMA.md  PROTOCOL_SPECIFICATIONS.md  QUERY_MONITORING.md  README.md  personal-indexer-specs.md
.github/workflows/: ci-cd.yml
K-content-remover/: Cargo.toml  README.md
K-content-remover/src/: config.rs  database.rs  main.rs  removal_operation.rs
K-database-cleaner/: Cargo.toml  README.md
K-database-cleaner/src/: config.rs  main.rs
K-database-cleaner/src/purge_operations/: mod.rs  operation_1.rs  operation_2.rs  operation_3.rs  operation_4.rs  operation_5.rs
K-indexer-legacy/: Cargo.toml  README.md
K-indexer-legacy/src/: api_handlers.rs  kaspa_connection.rs  models.rs  notification_handler.rs
K-transaction-processor/: Cargo.toml  DATABASE_SETUP.md  migration_002_create_k_protocol_tables.sql  rollback_002_drop_k_protocol_tables.sql
K-transaction-processor/migrations/schema/: down.sql  up.sql  v0_to_v1.sql
K-transaction-processor/src/: config.rs  database.rs  hashtag_extractor.rs  k_protocol.rs  listener.rs  main.rs  migrations.rs  queue.rs  transaction_reindex_service.rs  worker.rs
K-transaction-processor/src/migrations/manual/: rechunk_hypertables.sql
K-transaction-processor/src/migrations/schema/: down.sql  up.sql  v0.sql  v0_to_v1.sql  v1_to_v2.sql  v2_to_v3.sql  v3_to_v4.sql  v4_to_v5.sql  v5_to_v6.sql  v6_to_v7.sql  v7_to_v8.sql  v8_to_v9.sql  v9_to_v10.sql
K-webserver/: Cargo.toml  Extended_database_optimization.md
K-webserver/locust/: locustfile.py
K-webserver/src/: api_handlers.rs  config.rs  database_postgres_impl.rs  database_trait.rs  main.rs  models.rs  web_server.rs
docker/: compose.yaml
docker/DEV/: .env  Dockerfile.K-database-cleaner  Dockerfile.K-transaction-processor  Dockerfile.K-webserver  compose.yaml
docker/DEV_compose/: compose.yaml
docker/K-WEBSERVER-MONITORING/: K-WEBSERVER-MONITORING.md  compose.yaml  prometheus.yml
docker/K-WEBSERVER-MONITORING/grafana/: grafana.ini
docker/K-WEBSERVER-MONITORING/grafana/dashboards/: grafana-dashboard-axum-endpoints.json
docker/K-WEBSERVER-MONITORING/grafana/provisioning/dashboards/: dashboards.yml
docker/PROD/: .env  Dockerfile.K-database-cleaner  Dockerfile.K-webserver  compose.yaml
docker/PROD_compose/: compose.yaml
docs/: timescaledb-implementation.md
new-transaction-processor/: Cargo.toml  DATABASE_SETUP.md  config.toml  migration_001_add_transaction_trigger.sql  migration_002_create_k_protocol_tables.sql  rollback_001_remove_transaction_trigger.sql
new-transaction-processor/src/: config.rs  database.rs  k_protocol.rs  listener.rs  main.rs  migrations.rs  queue.rs  worker.rs
new-webserver/: Cargo.toml  config.toml
new-webserver/src/: config.rs  main.rs
src/: api_handlers.rs  cli.rs  database.rs  database_polo_impl.rs  database_trait.rs  kaspa_connection.rs  main.rs  models.rs  notification_handler.rs  test_vote_implementation.rs  transaction_processor.rs  web_server.rs
