[package]
name = "K-indexer"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.0", features = ["v4"] }
ctrlc = "3.4.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.29"
kaspa-consensus-core = { path = "../rusty-kaspa/consensus/core" }
kaspa-rpc-core = { path = "../rusty-kaspa/rpc/core" }
kaspa-wrpc-client = { path = "../rusty-kaspa/rpc/wrpc/client" }
kaspa-notify = { path = "../rusty-kaspa/notify" }
# Additional dependencies for proper Kaspa message signature verification
kaspa-wallet-core = { path = "../rusty-kaspa/wallet/core" }
kaspa-hashes = { path = "../rusty-kaspa/crypto/hashes" }
workflow-core = "0.18.0"
workflow-log = "0.18.0"
async-channel = "2.5.0"
polodb_core = "5.1.3"
axum = { version = "0.7.9", features = ["json"] }
tower-http = { version = "0.6.6", features = ["cors"] }
hex = "0.4.3"
url = "2.4.1"
secp256k1 = "0.29"