[package]
name = "K-transaction-processor"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
hex = "0.4"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
# Hashtag extraction dependencies
base64 = "0.21"
regex = "1.10"
once_cell = "1.19"
# Kaspa signature verification dependencies (from main K-indexer)
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", features = ["wasm32-sdk"] }
secp256k1 = "0.29"
base64ct = "1.8.0"