[package]
name = "K-webserver"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
tower = "0.5.2"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
hex = "0.4"
clap = { version = "4.5.48", features = ["derive"] }
axum-prometheus = "0.9"
base64ct = "1.8.0"